compiler/tests/fa/errors/pure_vec_mut.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع پرکن(شمار : صحیح) : صحیح:
    متغیر مقدار := وکتور {} بعنوان وکتور<صحیح>
    مقدار.بیفزا(شمار)
    بازگشت مقدار.طول()
تمام

تابع اصلی:
    چاپ(پرکن(3))
تمام
